--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,29 +11,33 @@
     <nav class="navbar">
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
-              <a href="#">Inicio</a>
-              <a class="nav-link active text-light opacity-50" aria-current="page" href="#">datos</a>
-              <a class="nav-link text-light opacity-50" href="#">ultimos trabajos</a>
+                <a href="#">Inicio</a>
+                <a class="nav-link active text-light opacity-50" aria-current="page" href="#">datos</a>
+                <a class="nav-link text-light opacity-50" href="#">ultimos trabajos</a>
             </div>
-          </div>
+        </div>
     </nav>
 </header>
+
 <body>
     <section class="header">
         <h1>JACK KELVIN MATTA PEREDA</h1>
         <p>estudiante desafio latam </p>
         <p>full stack G65</p>
-        <img src="assets/img/perfil.png" alt="foto perfil"/>
+        <img src="assets/img/perfil.png" alt="foto perfil" />
     </section>
-    <main>
+
         <section class="seccion">
             <div class="icons">
                 <i class='bx bxl-facebook-circle'></i>
                 <i class='bx bxl-instagram'></i>
-                <i class='bx bxl-whatsapp' ></i>
-                <i class='bx bxl-tiktok' ></i>
+                <i class='bx bxl-whatsapp'></i>
+                <i class='bx bxl-tiktok'></i>
             </div>
-            <article>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga eligendi quae consectetur sed a quidem provident illum cumque reiciendis omnis officiis quia, vel deserunt eos unde accusantium, quas eveniet distinctio Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt veniam ipsam impedit? Cupiditate unde sequi ab.</article>
+            <article>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga eligendi quae consectetur sed a
+                quidem provident illum cumque reiciendis omnis officiis quia, vel deserunt eos unde accusantium, quas
+                eveniet distinctio Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt veniam ipsam
+                impedit? Cupiditate unde sequi ab.</article>
             <div class="btns">
                 <button>DESCARGAR CV</button>
                 <button>CONTACTAME</button>
@@ -62,7 +67,7 @@
                                 <li>TECNICA : 2007 - 2008</li>
                                 <li>FULL STACK : 2023 - 2024</li>
                             </ul>
-                            
+
                         </div>
                     </div>
                 </div>
@@ -83,7 +88,7 @@
                         <div class="extra-information">
                             <p>actualmente estudiando el bootcamp full stack java script
                                 en la generacion 65 2023-2024
-                            
+
                             </p>
                         </div>
                     </div>
@@ -97,9 +102,9 @@
                 </button>
             </div>
         </section>
-    </main>
+
     <footer>
-        <p>desafio latam generacion 65 </p>
+        <p class="texto">desafio latam generacion 65 </p>
     </footer>
 </body>
 
